added html tasks

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Shivam_Yadav_21BCE2598 -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -25,6 +26,65 @@
                 <tr>
                     <td>Task-1</td>
                     <td><a href="./task1_Shivam_Yadav.html">Link-1(HTML)</a></td>
+                </tr>
+                <tr>
+                    <td>Task-2</td>
+                    <td><a href="./task2_Shivam_Yadav.html">Link-2(HTML)</a></td>
+                </tr>
+                <tr>
+                    <td>Task-3</td>
+                    <td><a href="./task3_Shivam_Yadav.html">Link-3(HTML)</a></td>
+                </tr>
+                <tr>
+                    <td>Task-4</td>
+                    <td><a href="./task4_Shivam_Yadav.html">Link-4(HTML)</a></td>
+                </tr>
+                <tr>
+                    <td>Task-5</td>
+                    <td><a href="./task5_Shivam_Yadav.html">Link-5(HTML)</a></td>
+                </tr>
+            </tbody>
+        </table>
+        <br>
+        <table border="3">
+            <thead>
+                <tr>
+                    <th colspan="2">CSS Tasks</th>
+                    
+                </tr>
+                <tr>
+                    <th>Task Number</th>
+                    <th>Link</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Task-1</td>
+                    <td><a href="./task6_Shivam_Yadav.html">Link-1 (CSS)</a></td>
+                </tr>
+                <tr>
+                    <td>Task-2</td>
+                    <td><a href="./task7_Shivam_Yadav.html">Link-2 (CSS)</a></td>
+                </tr>
+                <tr>
+                    <td>Task-3</td>
+                    <td><a href="./task8_Shivam_Yadav.html">Link-3 (CSS)</a></td>
+                </tr>
+                <tr>
+                    <td>Task-4</td>
+                    <td><a href="./task9_Shivam_Yadav.html">Link-4 (CSS)</a></td>
+                </tr>
+                <tr>
+                    <td>Task-5</td>
+                    <td><a href="./task10_Shivam_Yadav.html">Link-5 (CSS)</a></td>
+                </tr>
+                <tr>
+                    <td>Task-6</td>
+                    <td><a href="./task11_Shivam_Yadav.html">Link-6 (CSS)</a></td>
+                </tr>
+                <tr>
+                    <td>Task-7</td>
+                    <td><a href="./task12_Shivam_Yadav.html">Link-7 (CSS)</a></td>
                 </tr>
             </tbody>
         </table>
