--- a/task8_Shivam_Yadav.html
+++ b/task8_Shivam_Yadav.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task-8_CSS</title>
     <style>
-        th{
+        th{ color: #fdf7f7;
             background-color: rgba(66, 187, 103, 0.956);
         }
         th,td{
