--- a/task6_Shivam_Yadav.html
+++ b/task6_Shivam_Yadav.html
@@ -23,42 +23,42 @@
             height: 200px;
             border-spacing: 15px;
         }
-        .R1C1{
+        .R1{
             border :solid rgb(133, 193, 73)  4px ;
             border-radius: 5px;
         }
-        .R1C2{
+        .R2{
             border: solid rgb(133, 193, 73) 4px;
             border-radius: 8px;
         }
-        .R1C3{
+        .R3{
             border: solid rgb(133, 193, 73) 4px;
             border-radius: 12px;
         }
-        .R2C1{
+        .R4{
             border: solid rgb(133, 193, 73) 4px;
             border-radius: 9px;
         }
-        .R2C2{
+        .R5{
             border: solid rgb(133, 193, 73) 4px;
             border-radius: 3px;
         }
-        .R2C3{
+        .R6{
             border: solid rgb(133, 193, 73) 4px;
             border-radius: 12px;
         }
-        .R3C1{
+        .R7{
             border: solid rgb(133, 193, 73) 4px;
             border-radius: 50%;
         }
-        .R3C2{
+        .R8{
             border: solid rgb(133, 193, 73)4px;
             border-radius: 5px;
         }
-        .R3C3{
+        .R9{
             border: solid rgb(133, 193, 73) 4px;
-            border-top-right-radius: 19px;
-            border-bottom-left-radius: 19px;
+            border-top-right-radius: 18px;
+            border-bottom-left-radius: 18px;
         }
 
     </style>
@@ -89,19 +89,19 @@
     
         <table class="st">
             <tr>
-                <td class="R1C1"></td>
-                <td class="R1C2"></td>
-                <td class="R1C3"></td>
+                <td class="R1"></td>
+                <td class="R2"></td>
+                <td class="R3"></td>
             </tr>
             <tr>
-                <td class="R2C1"></td>
-                <td class="R2C2"></td>
-                <td class="R2C3"></td>
+                <td class="R4"></td>
+                <td class="R5"></td>
+                <td class="R6"></td>
             </tr>
             <tr>
-                <td class="R3C1"></td>
-                <td class="R3C2"></td>
-                <td class="R3C3"></td>
+                <td class="R7"></td>
+                <td class="R8"></td>
+                <td class="R9"></td>
             </tr>
             
         </table>
