--- a/task11_Shivam_Yadav.html
+++ b/task11_Shivam_Yadav.html
@@ -7,8 +7,8 @@
     <title>Task-11_CSS</title>
     <style>
 form {
-    border: 3px solid #f1f1f1;
-    margin-top: 100px;
+    border: 3.5px solid #f1f1f1;
+    margin-top: 80px;
     margin-left: 500px;
     margin-right: 500px;
 }
@@ -40,7 +40,7 @@ input[type=text], input[type=password] {
 }
 .image{
   text-align: center;
-  margin: 24px 0 12px 0;
+  margin: 15px 0 12px 0;
 }
 img.pic {
   width: 40%;
@@ -67,7 +67,7 @@ span.passw {
 <body>
     <form>
         <div class="image">
-          <img src="./required.png" alt="image_missing" class="pic">
+          <img src="./required.jpeg" alt="image_missing" class="pic">
         </div>
       
         <div class="cont">
